# Compilers_Project

./: CMakeLists.txt  README.md
optimization_programs/: op1.ek  op2.ek
src/: codegen.cpp  ek_parser.y  ek_tokens.l  main.cpp
src/lib/: ast.hpp  cint_check.hpp
test/: test1.ek  test2.ek
